<resources>
    <string name="app_name" translatable="false">BikeTracks</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="my_parcours">My tracks</string>
    <string name="map">Map</string>
    <string name="search_hint">Enter location</string>
    <string name="title_activity_maps">Map</string>
    <string name="default_location_title">No location available</string>
    <string name="pick_place">Pick the place you\'re at</string>
    <string name="location_not_found">Location not found</string>
    <string name="urgency_contacts">Urgency contacts</string>
    <string name="contact_already_exists">The contact already exists…</string>
    <string name="urgency_message_sent">Urgency message sent!</string>
    <string name="gps_seems_disabled">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="button_start_recording">Record an activity</string>
    <string name="button_stop_recording">Stop recording</string>
    <string name="distance">Distance</string>
    <string name="duration">Duration</string>
    <string name="speed">Speed</string>
    <string name="climb">Climb</string>
    <string name="descent">Descent</string>
    <string name="altitude_m">Elevation [m]</string>
    <string name="distance_m">Distance [km]</string>
    <string name="error">Error</string>
    <string name="selected_track_empty">The selected track is empty</string>
    <string name="track_preview">Track preview</string>
    <string name="urgency">Urgency</string>
    <string name="track_name">Track Name</string>
    <string name="date_format">DD.MM.YY</string>
    <string name="distance_format" translatable="false">xx.x km</string>
    <string name="duration_format" translatable="false">00:00</string>
    <string name="speed_format" translatable="false">xx.x km/h</string>
    <string name="confirm_urgency">Confirm urgency</string>
    <string name="confirm_urgency_description">Are you sure you want to send an alert to your urgrency contacts?</string>
    <string name="grant_access">You need to grant access to</string>
    <string name="secure_contacts">to make your secure contacts find you.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="error_fetching_position">Error fetching position, please try again</string>
    <string name="allow_access_to_location_for_activity">Allow access to location to start an activity.</string>
    <string name="no_registered_tracks">No registered tracks yet.</string>
    <string name="enable_location_first">Error, enable location first.</string>
    <string name="my_tracks">Show my tracks</string>
    <string name="preference_file_key" translatable="false">ch.mse.biketracks.PREFERENCES_FILE</string>
    <string name="show_my_tracks_preference" translatable="false">show_my_tracks</string>
    <string name="follow_this_track">Follow this track</string>
    <string name="position_permission_not_granted">Position permission not granted or disabled</string>
    <string name="bike_accident_sms_1">(TEST) I have had a bike accident and you are my secure contact.</string>
    <string name="bike_accident_sms_2">Please come pick me up:</string>
    <string name="permission_denied">Some Permission is Denied</string>
    <string name="allow_access_to_contacts">You need to allow access to Contacts to add emergency contacts</string>
    <string name="permission_denied_contacts">Permission READ_CONTACTS denied</string>
    <string name="save_recorded_track">Would you like to save your track ?</string>
    <string name="name_your_track">Name your track</string>
    <string name="recording_track">You are currently recording a track</string>
</resources>
