<?xml version="1.0" encoding="utf-8"?>


<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context="ch.mse.biketracks.TrackActivity">

    <fragment
        android:id="@+id/track_map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.v7.widget.GridLayout
        android:id="@+id/track_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:clipToPadding="true"
        app:columnCount="6"
        app:rowCount="4"
        app:behavior_peekHeight="90dp"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

        <TextView
            android:id="@+id/trackdetail_title"
            android:padding="14dp"
            android:textSize="14sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_column="0"
            app:layout_columnSpan="4"
            app:layout_row="0"
            android:layout_width="1dp"
            app:layout_gravity="fill_horizontal"
            tools:text="track title  mvfd s" />

        <TextView
            android:id="@+id/trackdetail_type"
            android:paddingBottom="14dp"
            android:paddingRight="14dp"
            android:paddingEnd="14dp"
            android:paddingLeft="14dp"
            android:paddingTop="14dp"
            android:textSize="12sp"
            app:layout_column="4"
            app:layout_columnSpan="2"
            app:layout_gravity="right|center_vertical"
            app:layout_row="0"
            tools:text="track type" />

        <ImageView
            android:id="@+id/trackdetail_icon_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_column="0"
            app:layout_row="1"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            app:layout_gravity="right|center_vertical"
            android:src="@drawable/distance"
            android:contentDescription="@string/distance" />

        <TextView
            android:id="@+id/trackdetail_distance"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textSize="13sp"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="1"
            app:layout_rowWeight="1"
            app:layout_gravity="left|center_vertical"
            tools:text="xxx km" />

        <ImageView
            android:id="@+id/trackdetail_icon_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_column="2"
            app:layout_row="1"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            app:layout_gravity="right|center_vertical"
            android:src="@drawable/duration"
            android:contentDescription="@string/distance" />

        <TextView
            android:id="@+id/trackdetail_duration"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textSize="13sp"
            app:layout_column="3"
            app:layout_columnWeight="1"
            app:layout_row="1"
            app:layout_rowWeight="1"
            app:layout_gravity="left|center_vertical"
            tools:text="00h00" />

        <ImageView
            android:id="@+id/trackdetail_icon_climb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_column="4"
            app:layout_row="1"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            app:layout_gravity="right|center_vertical"
            android:src="@drawable/climb"
            android:contentDescription="@string/climb" />

        <TextView
            android:id="@+id/trackdetail_climb"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textSize="13sp"
            app:layout_column="5"
            app:layout_columnWeight="1"
            app:layout_row="1"
            app:layout_rowWeight="1"
            app:layout_gravity="left|center_vertical"
            tools:text="den+" />

        <ImageView
            android:id="@+id/trackdetail_icon_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_column="0"
            app:layout_row="2"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            app:layout_gravity="right|center_vertical"
            android:src="@drawable/date"
            android:contentDescription="@string/climb" />

        <TextView
            android:id="@+id/trackdetail_date"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textSize="13sp"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="2"
            app:layout_rowWeight="1"
            app:layout_gravity="left|center_vertical"
            tools:text="27.01.18" />

        <ImageView
            android:id="@+id/trackdetail_icon_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_column="2"
            app:layout_row="2"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            app:layout_gravity="right|center_vertical"
            android:src="@drawable/speed"
            android:contentDescription="@string/climb" />

        <TextView
            android:id="@+id/trackdetail_speed"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textSize="13sp"
            app:layout_column="3"
            app:layout_columnWeight="1"
            app:layout_row="2"
            app:layout_rowWeight="1"
            app:layout_gravity="left|center_vertical"
            tools:text="23 km/h" />

        <ImageView
            android:id="@+id/trackdetail_icon_descent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_column="4"
            app:layout_row="2"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            app:layout_gravity="right|center_vertical"
            android:src="@drawable/descent"
            android:contentDescription="@string/descent" />

        <TextView
            android:id="@+id/trackdetail_descent"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textSize="13sp"
            app:layout_column="5"
            app:layout_columnWeight="1"
            app:layout_row="2"
            app:layout_rowWeight="1"
            app:layout_gravity="left|center_vertical"
            tools:text="den-" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_row="3"
            app:layout_column="0"
            app:layout_columnSpan="6">

            <ch.mse.biketracks.utils.VerticalTextView
                android:id="@+id/yAxis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/altitude_m" />

            <com.jjoe64.graphview.GraphView
                android:id="@+id/elevationGraphTrackDetail"
                android:layout_width="match_parent"
                android:layout_height="120dip"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/yAxis"
                android:layout_toRightOf="@+id/yAxis" />

            <TextView
                android:id="@+id/xAxis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_below="@+id/elevationGraphTrackDetail"
                android:layout_centerHorizontal="true"
                android:text="@string/distance_m" />
        </RelativeLayout>

    </android.support.v7.widget.GridLayout>

</android.support.design.widget.CoordinatorLayout>
